SERVER-17387 prevent invalid projections from causing findAndModify to trigger a logOp() rollback

(cherry picked from commit 98276a11bdbd5ef863f0fead63c14f5a7a13440d)